--- a/myweb/templates/myweb/login.html
+++ b/myweb/templates/myweb/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TastyYummy</title>
-    <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/3637/3637879.svg">
+    <title>Login</title>
+     <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/2250/2250207.svg">
 </head>
 <body>
-<style>
+    <style>
 
 body, html {
   height: 100%;
@@ -16,7 +16,7 @@ body, html {
 }
  /* เปลี่ยนขนาดรูปภาพ */
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2017/03/19/18/22/italian-food-2157246_1280.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2018/07/14/15/27/cafe-3537801_1280.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,6 +49,7 @@ body, html {
   color: white;
 }
 
+ /* ถึงนี้ */
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -77,29 +78,28 @@ body {
   background-color: #fff68f;
   color: #333;
 }
-
 </style>
 </head>
 <body>
 
 <div class="topnav">
   <a class="active" href="/index">Tasty Yummy</a>
-  <a class="nav-link" href="/index">Home <span class="sr-only"> </span></a>
   <a href="/signup">Signup</a>
   <a href="/">Login</a>
   <a href="/logout">Logout</a>
-  <a href="/restaurant">Restaurant</a>
-  <a href="/drink">Drink</a>
-  <a href="/contact">Contact</a>
-  <a href="/addreviews">Addreviews</a>
-  <p style="text-align:right">  สวัสดี! {{user}}</p>
 </div>
+
 <div class="hero-image">
-    <div class="hero-text">
-    <h1 style="font-size:60px">Welcome To Myweb :) </h1>
+  <div class="hero-text">
+    <h1 style="font-size:50px">Login</h1>
+   <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        {% if form.errors %}<p> กรุณาลองใหม่อีกครั้ง </p>{% endif %}
+        <input type="submit" value="Login">
+    </form>
 
-</div>
-
+  </div>
 </div>
 
 </body>
