--- a/myweb/templates/myweb/signup.html
+++ b/myweb/templates/myweb/signup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TastyYummy</title>
-    <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/3637/3637879.svg">
+    <title>Document</title>
+     <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/1486/1486887.svg">
 </head>
-<body>
 <style>
+/* background */
 
 body, html {
   height: 100%;
@@ -16,7 +16,7 @@ body, html {
 }
  /* เปลี่ยนขนาดรูปภาพ */
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2017/03/19/18/22/italian-food-2157246_1280.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_1280.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -48,7 +48,6 @@ body, html {
   background-color: #555;
   color: white;
 }
-
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -77,7 +76,6 @@ body {
   background-color: #fff68f;
   color: #333;
 }
-
 </style>
 </head>
 <body>
@@ -88,19 +86,20 @@ body {
   <a href="/signup">Signup</a>
   <a href="/">Login</a>
   <a href="/logout">Logout</a>
-  <a href="/restaurant">Restaurant</a>
-  <a href="/drink">Drink</a>
-  <a href="/contact">Contact</a>
-  <a href="/addreviews">Addreviews</a>
-  <p style="text-align:right">  สวัสดี! {{user}}</p>
 </div>
+
 <div class="hero-image">
-    <div class="hero-text">
-    <h1 style="font-size:60px">Welcome To Myweb :) </h1>
+  <div class="hero-text">
+    <h1 style="font-size:50px">Signup</h1>
+<form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Sign up">
+</form>
 
-</div>
-
+  </div>
 </div>
 
 </body>
+</style>
 </html>
